--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,15 @@ build:
     - cmake --build cmake-build --config Release --target install  # [win]
     - cd pysjef  # [win]
     - set SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef={{ version }}  # [win]
+    - echo SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef=%SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef%  # [win]
     - {{ PYTHON }} -m pip install . -vv  # [win]
     - CXXFLAGS="${CXXFLAGS} -D_LIBCPP_DISABLE_AVAILABILITY -DBOOST_ASIO_DISABLE_STD_ALIGNED_ALLOC" cmake -B cmake-build . -DCMAKE_INSTALL_PREFIX=$PREFIX  # [osx and x86]
     - cmake -B cmake-build . -DBUILD_TESTS=OFF -DCMAKE_INSTALL_PREFIX=$PREFIX  # [arm64 or linux]
     - cmake --build cmake-build -t install  # [unix]
     - echo __version__ = \"{{ version }}\" > pysjef/pysjef/_version.py  # [unix]
-    - cd pysjef && SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef={{ version }} {{ PYTHON }} -m pip install . -vv  # [unix]
+    - export SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef={{ version }}
+    - echo SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef=$SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef  # [unix]
+    - cd pysjef && {{ PYTHON }} -m pip install . -vv  # [unix]
     - rm -f $(grep -v /bin/sjef ../cmake-build/install_manifest.txt)  # [unix]
   number: 2
 
@@ -38,6 +41,8 @@ requirements:
     - {{ compiler('cxx') }}
     - cmake >=3.14
     - make
+    - setuptools_scm >=8.1
+    - setuptools >=64
   host:
     - python
     - pip
