--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ build:
     - echo __version__ = \"{{ version }}\" > pysjef/pysjef/_version.py  # [unix]
     - export SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef={{ version }}
     - echo SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef=$SETUPTOOLS_SCM_PRETEND_VERSION_FOR_pysjef  # [unix]
+    - export SETUPTOOLS_SCM_DEBUG=1
     - cd pysjef && {{ PYTHON }} -m pip install . -vv  # [unix]
     - rm -f $(grep -v /bin/sjef ../cmake-build/install_manifest.txt)  # [unix]
   number: 2
@@ -41,7 +42,7 @@ requirements:
     - {{ compiler('cxx') }}
     - cmake >=3.14
     - make
-    - setuptools_scm >=8.1
+    - setuptools-scm >=8.1
     - setuptools >=64
   host:
     - python
